--- a/templates/pages/ad.html.twig
+++ b/templates/pages/ad.html.twig
@@ -7,8 +7,6 @@
 
 	<div class="line">
 		
-		<div>{{ ad.title }}</div>
-		
 		<div class="line">
 			<ion-icon class="icon" name="mail-sharp"></ion-icon>
 			Contacter
@@ -38,19 +36,7 @@
 				<img src="{{ ad.image }}" alt="">
 			</div>
 
-				<div>{{ ad.content }}
-				
-				
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elementum nulla sit amet metus ultricies blandit. Vestibulum nec lorem mi. Praesent non metus libero. Sed luctus enim at laoreet mattis. Suspendisse ut lacinia libero, ultrices ullamcorper purus. Nunc odio erat, pharetra nec mollis ut, malesuada eu augue. Quisque id urna vulputate, auctor justo vitae, consectetur sapien. Phasellus imperdiet quam ut ullamcorper tempor. Mauris sapien dui, vehicula a ante ut, tincidunt aliquam ligula. Nam nec imperdiet quam. Fusce maximus ac mauris sed varius. Nam tortor nibh, fringilla in hendrerit at, posuere sed nisl. Vivamus rutrum erat quis nibh posuere scelerisque. Ut libero velit, malesuada vitae ultricies a, scelerisque vel odio. Morbi molestie, magna sed venenatis tincidunt, justo nisl congue mauris, a faucibus est massa in purus.
-
-Proin auctor vitae dui ac efficitur. Cras faucibus sit amet velit eu suscipit. Etiam vitae mauris in velit sollicitudin dapibus in quis ligula. Donec pretium enim sit amet massa sodales feugiat. Duis gravida in nibh mattis tempus. Morbi vel ultricies diam. Nulla ut augue quis felis gravida condimentum. Vestibulum ultricies bibendum ante ut condimentum. Sed vel enim maximus, vestibulum libero nec, iaculis justo. Phasellus at interdum est. Cras facilisis tortor massa, et lobortis lacus scelerisque nec.
-
-Fusce tempor velit nec odio suscipit consectetur. In elementum posuere posuere. Nullam eget lacus egestas, vestibulum erat quis, faucibus dui. Maecenas lobortis arcu dapibus nisi pharetra porttitor. Mauris ut mollis eros, sed imperdiet magna. Aliquam maximus elit quis diam tincidunt, sed ultrices odio convallis. Maecenas suscipit, nisl et ornare pellentesque, arcu augue tempus metus, at pulvinar ex arcu eu urna. Maecenas blandit metus sed lorem lobortis ultricies. Nullam rutrum arcu ac erat malesuada, vitae tincidunt enim pretium. Phasellus et ipsum mattis, porta libero in, cursus sapien.
-
-Suspendisse mollis fermentum odio, in egestas tellus. Nam enim orci, dictum nec convallis efficitur, pulvinar vulputate nisi. Etiam in ligula nec nibh ornare dapibus. Donec non urna non enim fermentum aliquam. Donec vitae aliquet arcu. Sed semper odio vitae purus vulputate dignissim. Praesent pellentesque venenatis blandit. Nulla imperdiet eros quis commodo interdum. Sed vitae lectus eu enim fringilla dapibus.
-
-Aenean vitae viverra mauris. Duis commodo, metus imperdiet porta aliquam, diam libero efficitur turpis, id porttitor ipsum ex quis odio. Suspendisse interdum lacus nibh, ut pretium eros feugiat ut. Ut quis odio lectus. Nam facilisis imperdiet arcu, non egestas lorem tincidunt eget. Vestibulum mollis cursus imperdiet. In quis ipsum facilisis, viverra nunc et, lobortis elit. In vitae sem in turpis laoreet euismod eu sit amet sem. Ut nec magna ante. Aenean sit amet tortor et dui sagittis consectetur vel convallis arcu. Duis ac nulla massa. </div>
+				<div>{{ ad.content }}</div>
 		</div>
 	</div>
 </div>{% endblock %}
