--- a/templates/pages/create.html.twig
+++ b/templates/pages/create.html.twig
@@ -10,6 +10,7 @@
 	{{ form_start(adForm) }}
 	{{ form_row(adForm.title) }}
 	{{ form_row(adForm.content) }}
+	{{ form_row(adForm.city) }}
 	{{ form_row(adForm.image) }}
 	{{ form_row(adForm.price) }}
 	<button type="submit">Publier</button>
