--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,7 @@ nav {
 select:hover {
     cursor: pointer;
     color: white;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .submit_ad {
@@ -110,11 +111,6 @@ select {
     color: rgb(224, 224, 224);
 }
 
-.photos {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
 
 .icon {
     font-size: 1.5rem;
@@ -150,11 +146,16 @@ select {
 }
 
 img {
-    width: 300px;
 }
 
 .top_card {
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
     width: 100%;
     padding: 5px;
+}
+
+
+.photo {
+    width: 300px;
+    height: 400px;
 }
