--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 		<header>
 			<nav>
 
-				<a class="category" href="{{ path('home') }}">Accueil</a>
+				<a class="category home" href="{{ path('home') }}">Accueil</a>
 
 				<select name="departments">
 					<option value="01">01 - Ain</option>
@@ -35,6 +35,7 @@
 				<a class="category" href="#">Loisirs</a>
 				<a class="category" href="#">Autres</a>
 
+				<a class="category my_ads" href="#">Mes annonces</a>
 				<a class="category submit_ad" href=" {{ path('ad_create') }} ">Publier une annonce</a>
 			</nav>
 		</header>
