--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,15 +15,18 @@ body {
 }
 
 body,
-input {
+input,
+textarea {
     background-color: rgb(29, 34, 41);
+    color: rgb(224, 224, 224);
+    width: 100%;
+    border: none;
 }
 
 header,
 footer,
 .card,
-.content,
-.top_card {
+.content {
     background-color: rgb(54, 61, 74);
     background-image: linear-gradient(to bottom, rgb(76, 82, 94), rgb(54, 61, 74));
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
@@ -93,14 +96,10 @@ select {
 
 
 
-
-
-
 .padding {
     height: 200px;
     height: 80px;
 }
-
 
 
 
@@ -113,10 +112,12 @@ select {
 
 .card {
     display: flex;
+    align-items: center;
     border-radius: 4px;
     padding: 5px;
     flex-direction: column;
     color: rgb(224, 224, 224);
+    gap: 5px;
 }
 
 
@@ -155,13 +156,6 @@ select {
 
 img {
 }
-
-.top_card {
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
-    width: 100%;
-    padding: 5px;
-}
-
 
 .photo {
     width: 300px;
