--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,15 +35,14 @@
 				<a class="category" href="#">Loisirs</a>
 				<a class="category" href="#">Autres</a>
 
-				<a class="category my_ads" href="#">Mes annonces</a>
+				<a class="category my_ads" href="{{ path('dashboard') }}">Mes annonces</a>
 				<a class="category submit_ad" href=" {{ path('ad_create') }} ">Publier une annonce</a>
 			</nav>
 		</header>
 
 		<div class="padding"></div>
 
-		<div class="container"> {% block body %}{% endblock %}
-			</div>
+		<div class="container"> {% block body %}{% endblock %} </div>
 
 			<div class="padding"></div>
 
