--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,6 @@
 					<option value="02">02 - Aisne</option>
 				</select>
 
-
 				<a class="category" href="#">Immobilier</a>
 				<a class="category" href="#">Véhicules</a>
 				<a class="category" href="#">Vacances</a>
@@ -42,7 +41,8 @@
 
 		<div class="padding"></div>
 
-		<div class="container"> {% block body %}{% endblock %} </div>
+		<div class="container"> {% block body %}{% endblock %}
+			</div>
 
 			<div class="padding"></div>
 
