--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -2,6 +2,10 @@
 
 {% block body %}
 
+	<div class="content">
+		Annonces
+	</div>
+
 	{% for ad in ads %}
 		<a href="{{ path('ad_show' , {'id':ad.id}) }}" class="card">
 			<div class="line">
