--- a/templates/pages/create.html.twig
+++ b/templates/pages/create.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
 	<div class="content">
 		Publier une annonce
 	</div>
@@ -15,5 +14,5 @@
 		{{ form_row(adForm.price) }}
 		<button type="submit">Publier</button>
 		{{ form_end(adForm) }}
-		<div>
-		{% endblock %}
+	</div>
+{% endblock %}
