--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,8 @@
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		{% block stylesheets %}
-
 			<link rel="stylesheet" href="{{ asset('css/style.css') }}">
 		{% endblock %}
 		{% block javascripts %}{% endblock %}
@@ -27,12 +26,15 @@
 
 				<a class="category" href="#">Immobilier</a>
 				<a class="category" href="#">Véhicules</a>
-				<a class="category" href="#">Vacances</a>
-				<a class="category" href="#">Mode</a>
-				<a class="category" href="#">Maison</a>
-				<a class="category" href="#">Multimédia</a>
-				<a class="category" href="#">Loisirs</a>
-				<a class="category" href="#">Autres</a>
+				{# <a class="category" href="#">Vacances</a>
+								<a class="category" href="#">Mode</a>
+								<a class="category" href="#">Maison</a>
+								<a class="category" href="#">Multimédia</a>
+								<a class="category" href="#">Loisirs</a>
+								<a class="category" href="#">Autres</a> #}
+
+				<a class="category" href="#">Connexion</a>
+				<a class="category" href="#">Inscription</a>
 
 				<a class="category my_ads" href="{{ path('dashboard') }}">Mes annonces</a>
 				<a class="category submit_ad" href=" {{ path('ad_create') }} ">Publier une annonce</a>
