--- a/templates/pages/ad.html.twig
+++ b/templates/pages/ad.html.twig
@@ -6,7 +6,7 @@
 	<div class="content">
 
 		<div class="line">
-			{{ ad.title }}
+			<div class="contrast">{{ ad.title }}</div>
 
 			<div>
 				<ion-icon class="icon" name="mail-sharp"></ion-icon>
