--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,7 +67,11 @@ button:hover {
     cursor: pointer;
     color: white;
     background-color: rgba(255, 255, 255, 0.1);
+}
 
+button {
+    background-color: rgb(142, 239, 151);
+    box-shadow: inset 0px 0px 10px -5px rgba(0, 0, 0, 0.5);
 }
 
 .home {
