--- a/templates/pages/ad.html.twig
+++ b/templates/pages/ad.html.twig
@@ -3,6 +3,10 @@
 {% block body %}
 
 	<div class="content">
+		<a href="{{ path('ad_delete', {'id': ad.id}) }}" onclick="return confirm('Êtes-vous sûr(e) de vouloir supprimer cette annonce ?')">Supprimer</a>
+	</div>
+
+	<div class="content">
 		<div class="line">
 			<div>{{ ad.title }}</div>
 
@@ -30,10 +34,6 @@
 		</div>
 
 		<div>{{ ad.content }}</div>
-	</div>
-
-	<div class="content">
-		<a href="{{ path('ad_delete', {'id': ad.id}) }}" onclick="return confirm('Are you sure you want to delete this advertisement?')">Delete</a>
 	</div>
 
 {% endblock %}
