--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,20 +69,15 @@ button:hover {
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-button {
-    background-color: rgb(142, 239, 151);
-    box-shadow: inset 0px 0px 10px -5px rgba(0, 0, 0, 0.5);
-}
-
 .home {
     color: rgb(141, 165, 243)
 }
 
-.submit_ad {
+.green {
     color: rgb(142, 239, 151);
 }
 
-.my_ads {
+.red {
     color: rgb(252, 127, 127);
 }
 
