--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,17 +27,17 @@
 				<a class="category" href="#">Immobilier</a>
 				<a class="category" href="#">Véhicules</a>
 				{# <a class="category" href="#">Vacances</a>
-								<a class="category" href="#">Mode</a>
-								<a class="category" href="#">Maison</a>
-								<a class="category" href="#">Multimédia</a>
-								<a class="category" href="#">Loisirs</a>
-								<a class="category" href="#">Autres</a> #}
+																<a class="category" href="#">Mode</a>
+																<a class="category" href="#">Maison</a>
+																<a class="category" href="#">Multimédia</a>
+																<a class="category" href="#">Loisirs</a>
+																<a class="category" href="#">Autres</a> #}
 
 				<a class="category" href="#">Connexion</a>
 				<a class="category" href="#">Inscription</a>
 
-				<a class="category my_ads" href="{{ path('dashboard') }}">Mes annonces</a>
-				<a class="category submit_ad" href=" {{ path('ad_create') }} ">Publier une annonce</a>
+				<a class="category red" href="{{ path('dashboard') }}">Mes annonces</a>
+				<a class="category green" href=" {{ path('ad_create') }} ">Publier une annonce</a>
 			</nav>
 		</header>
 
