--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
 		<header>
 			<nav>
 
-				<a class="category home" href="{{ path('home') }}">Accueil</a>
+				<a class="category blue" href="{{ path('home') }}">Accueil</a>
 
 				<select name="departments">
 					<option value="01">01 - Ain</option>
@@ -27,11 +27,11 @@
 				<a class="category" href="#">Immobilier</a>
 				<a class="category" href="#">Véhicules</a>
 				{# <a class="category" href="#">Vacances</a>
-																<a class="category" href="#">Mode</a>
-																<a class="category" href="#">Maison</a>
-																<a class="category" href="#">Multimédia</a>
-																<a class="category" href="#">Loisirs</a>
-																<a class="category" href="#">Autres</a> #}
+																																												<a class="category" href="#">Mode</a>
+																																												<a class="category" href="#">Maison</a>
+																																												<a class="category" href="#">Multimédia</a>
+																																												<a class="category" href="#">Loisirs</a>
+																																												<a class="category" href="#">Autres</a> #}
 
 				<a class="category" href="#">Connexion</a>
 				<a class="category" href="#">Inscription</a>
