--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,8 +33,8 @@
 																																												<a class="category" href="#">Loisirs</a>
 																																												<a class="category" href="#">Autres</a> #}
 
-				<a class="category" href="#">Connexion</a>
-				<a class="category" href="#">Inscription</a>
+				{# <a class="category red" href="#">Connexion</a>
+				<a class="category green" href="#">Inscription</a> #}
 
 				<a class="category red" href="{{ path('dashboard') }}">Mes annonces</a>
 				<a class="category green" href=" {{ path('ad_create') }} ">Publier une annonce</a>
