--- a/templates/pages/ad.html.twig
+++ b/templates/pages/ad.html.twig
@@ -32,12 +32,12 @@
 		</div>
 	</div>
 
-	<div class="content">
-		<div class="line2">
-			<img class="photo" src="{{ ad.image }}" alt="">
-		</div>
-
+<div class="content">
+	<div class="line">
+		<img class="photo" src="{{ ad.image }}" alt="">
 		<div>{{ ad.content }}</div>
 	</div>
+</div>
+
 
 {% endblock %}
