--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,6 +36,8 @@
 				{# <a class="category red" href="#">Connexion</a>
 				<a class="category green" href="#">Inscription</a> #}
 
+				<a class="category red" href="{{ path('app_login') }}">Se connecter</a>
+				<a class="category green" href="{{ path('app_login') }}">Inscription</a>
 				<a class="category red" href="{{ path('dashboard') }}">Mes annonces</a>
 				<a class="category green" href=" {{ path('ad_create') }} ">Publier une annonce</a>
 			</nav>
