--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,10 @@
 		{% block stylesheets %}
 			<link rel="stylesheet" href="{{ asset('css/style.css') }}">
 		{% endblock %}
-		{% block javascripts %}{% endblock %}
+		{% block javascripts %}
+    		<script src="{{ asset('app.js') }}"></script>
+		{% endblock %}
+
 	</head>
 	<body>
 		<header>
@@ -19,25 +22,19 @@
 
 				<a class="category blue" href="{{ path('home') }}">Accueil</a>
 
-				<select name="departments">
-					<option value="01">01 - Ain</option>
-					<option value="02">02 - Aisne</option>
-				</select>
+				{% include "_partials/_region.html.twig" %}
+
 
 				<a class="category" href="#">Immobilier</a>
 				<a class="category" href="#">Véhicules</a>
 				{# <a class="category" href="#">Vacances</a>
 																																												<a class="category" href="#">Mode</a>
-																																												<a class="category" href="#">Maison</a>
-																																												<a class="category" href="#">Multimédia</a>
-																																												<a class="category" href="#">Loisirs</a>
-																																												<a class="category" href="#">Autres</a> #}
-
 				{# <a class="category red" href="#">Connexion</a>
 				<a class="category green" href="#">Inscription</a> #}
 
 				<a class="category red" href="{{ path('app_login') }}">Se connecter</a>
-				<a class="category green" href="{{ path('app_login') }}">Inscription</a>
+				<a class="category green" href="{{ path('app_register') }}">Inscription</a>
+				<a class="category red" href="{{ path('app_logout') }}">Se déconnecter</a>
 				<a class="category red" href="{{ path('dashboard') }}">Mes annonces</a>
 				<a class="category green" href=" {{ path('ad_create') }} ">Publier une annonce</a>
 			</nav>
@@ -54,5 +51,6 @@
 
 			<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 			<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 		</body>
 	</html>
