--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,8 @@
         <a class="category red" href="{{ path('app_login') }}">Se connecter</a>
         <a class="category green" href="{{ path('app_register') }}">Inscription</a>
         {% endif %}
+
+		<a class="category green" href="{{ path('ad_create') }}">Publier une annonce</a>
     </nav>
 </header>
 
