--- a/templates/pages/dashboard.html.twig
+++ b/templates/pages/dashboard.html.twig
@@ -3,6 +3,12 @@
 {% block body %}
 
 <div class="content">
+<a class="green" href="{{ path('ad_create') }}">Publier une annonce</a></div>
+
+<div class="content">
+<a class="red" href="{{ path("app_logout")  }}">Se deconnecter</a></div>
+
+<div class="content">
 Mes annonces
 </div>
 {% endblock %}
