--- a/templates/pages/create.html.twig
+++ b/templates/pages/create.html.twig
@@ -1,9 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="content">
-		Publier une annonce
-	</div>
 
 	<div class="content">
 		{{ form_start(adForm) }}
@@ -12,10 +9,8 @@
 		{{ form_row(adForm.city) }}
 		{{ form_row(adForm.image) }}
 		{{ form_row(adForm.price) }}
-	</div>
 
-	<div class="content">
-		<button class="green" type="submit">Publier</button>
+		<button type="submit">Publier</button>
 	</div>
 	{{ form_end(adForm) }}
 
