--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -5,7 +5,7 @@
         <a class="category" href="#">Immobilier</a>
         <a class="category" href="#">Véhicules</a>
         {% if app.user %}
-        <a class="category red" href="{{ path('dashboard') }}">Mon compte</a>
+        <a class="category red active" href="{{ path('dashboard') }}">Mon compte</a>
         <a class="category green" href="{{ path('ad_create') }}">Publier une annonce</a>
         {% else %}
         <a class="category red" href="{{ path('app_login') }}">Se connecter</a>
