--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -1,6 +1,6 @@
 <header>
     <nav id="category-nav">
-        <a class="category blue" href="{{ path('home') }}">Reset</a>
+        <a class="category blue" href="{{ path('home') }}">Accueil</a>
         {% include "_partials/_region.html.twig" %}
         <select name="departments">
     <option value="recent">Plus récent</option>
