--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -2,6 +2,16 @@
 
 {% block body %}
 
+	<div class="content">
+		{% include "_partials/_region.html.twig" %}
+		<select name="sort" onchange="handleSortChange(this)">
+			<option value="recent" {% if selectedSortOption=='recent' %} selected{% endif %}>Plus récent</option>
+			<option value="cheapest" {% if selectedSortOption=='cheapest' %} selected{% endif %}>Moins cher</option>
+		</select>
+		<a class="category" href="#">Immobilier</a>
+		<a class="category" href="#">Véhicules</a>
+	</div>
+	
 	{% for ad in ads %}
 		<a href="{{ path('ad_show' , {'id':ad.id}) }}" class="card">
 			<div class="line">
