--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -24,7 +24,7 @@
 			</div>
 
 			<img class="photo" src="{{ ad.image }}" alt="Photo annonce">
-			{{ ad.city }}
+			{{ ad.region }}
 		</a>
 
 	{% endfor %}
