--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,10 @@ footer,
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
+option {
+    background-color: rgb(54, 61, 74);
+}
+
 header {
     position: fixed;
     display: flex;
